// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`values to match 1`] = `
<div>
  <div
    style={
      Object {
        "display": "inline-block",
        "position": "relative",
      }
    }
  />
</div>
`;

exports[`values to match 2`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "position": "relative",
    }
  }
/>
`;
